# scraperHub

./: .gitignore  README.md  config.example.toml  pyproject.toml
scrapers/: abstract_scraper.py
scrapers/binance/: announcement_content.py  listing_announcements.py
scrapers/twitter/: progress.py  scrapper.py  tweet.py
tasks/: binance_listing.py  twitter_test_task.py
utils/: logger.py  scroller.py
webdrivers/: firefox.py
