[tool.poetry]
name = "scraperhub"
version = "0.1.0"
description = "Scrapers all in one"
authors = ["sle3pyc4t <fdujwc.cn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fake-headers = "^1.0.2"
selenium = "^4.26.1"
webdriver-manager = "^4.0.2"
pandas = "^2.2.3"
toml = "^0.10.2"
python-telegram-bot = "^21.7"
ollama = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
